--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.28)
-project(cmpt)
+project(cmpt LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 20 CACHE STRING "The CPP standard in use")
+set(CMAKE_CXX_STANDARD 17 CACHE STRING "The CPP standard in use")
 set(CMAKE_CXX_COMPILER g++)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
