--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/json"]
-	path = lib/json
-	url = https://github.com/nlohmann/json
+[submodule "lib/Crow"]
+	path = lib/Crow
+	url = https://github.com/CrowCpp/Crow
