rewritev2: done with the single and multi fetchers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 add_definitions(-DDEBUG)
 
 list(APPEND SOURCE_FILES src/main.cpp
-						src/fetchers/one.cc)
+						src/fetchers/one.cc
+						src/fetchers/contest.cc)
 
 add_executable(cry ${SOURCE_FILES})
 target_include_directories(cry PUBLIC include/)
