--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ target_include_directories(cry PRIVATE include/crow_include/)
 
 set(SUBMODULES_LIST
 	"${PROJECT_SOURCE_DIR}/lib/Crow/"
+	"${PROJECT_SOURCE_DIR}/lib/args/"
 )
 set(MISSING_SUBMODULES FALSE)
 
