--- a/demo/config.json
+++ b/demo/config.json
@@ -11,7 +11,7 @@
     },
     "compile_flags": {
         "g++": {
-            "base": "-Wall -Wextra -O2 -std=c++20 -Wconversion -Wduplicated-cond -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -fsanitize=address"
+            "base": "-Wall -pedantic -Wextra -O2 -std=c++20 -Wconversion -Wduplicated-cond -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -fsanitize=address"
         }
     }
 }
